--- a/CSS/index.css
+++ b/CSS/index.css
@@ -82,10 +82,9 @@
   cursor: pointer;
 }
 .menu {
-  display: none;
   position: fixed;
   top: 75px;
-  left: 0;
+  left: -350px;
   width: 350px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
@@ -95,6 +94,7 @@
   border-bottom: none;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
+  transition: left 0.5s ease-out;
 }
 .menu ul li {
   list-style-type: none;
@@ -103,7 +103,7 @@
   text-align: center;
 }
 .menu--open {
-  display: block;
+  left: 0;
 }
 html,
 body {
