--- a/CSS/index.css
+++ b/CSS/index.css
@@ -45,9 +45,10 @@
   border-radius: 10px;
   background-color: white;
   position: relative;
-  height: 50px;
+  max-height: 50px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
+  transition: max-height 0.5s ease-out;
 }
 .article h2 {
   font-size: 28px;
@@ -74,7 +75,7 @@
   background-color: white;
 }
 .article-open {
-  height: 400px;
+  max-height: 600px;
 }
 .menu-button {
   position: absolute;
