--- a/Article/Article.less
+++ b/Article/Article.less
@@ -11,7 +11,7 @@
   max-height: 50px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
-  transition: max-height 0.5s ease-out;
+  transition: max-height 0.25s;
 
   h2 {
     font-size: 28px;
@@ -44,7 +44,8 @@
 
 .article-open {
   //height: 400px;
-  max-height: 600px;
+  max-height: 1200px;
+  transition: max-height 0.5s;
   //overflow: auto;
 }
 
