--- a/CSS/index.css
+++ b/CSS/index.css
@@ -48,7 +48,7 @@
   max-height: 50px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
-  transition: max-height 0.5s ease-out;
+  transition: max-height 0.25s;
 }
 .article h2 {
   font-size: 28px;
@@ -75,7 +75,8 @@
   background-color: white;
 }
 .article-open {
-  max-height: 600px;
+  max-height: 1200px;
+  transition: max-height 0.5s;
 }
 .menu-button {
   position: absolute;
